apex/grammar.js
    parser_output: ($) => repeat($.declaration),

    // Expressions

    field_access: ($) =>
      seq(
        field("object", choice($.primary_expression, $.super)),
        optional(seq($._property_navigation, $.super)),
        $._property_navigation,
        field("field", choice($.identifier, $.this))
      ),

    _property_navigation: ($) => seq(optional("?"), "."),

    block: ($) => seq("{", repeat($.statement), "}"),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body)
      ),

    modifiers: ($) =>
      repeat1(
        choice(
          $.annotation,
          ci("global"),
          ci("public"),
          ci("testMethod"),
          ci("protected"),
          ci("override"),
          ci("private"),
          ci("virtual"),
          ci("abstract"),
          ci("static"),
          ci("final"),
          ci("transient"),
          seq(ci("with"), ci("sharing")), // TODO: class only
          seq(ci("without"), ci("sharing")),
          seq(ci("inherited"), ci("sharing"))
        )
      ),

    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";"
      ),

    _variable_declarator_list: ($) =>
      commaJoined1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        $._variable_declarator_id,
        optional(
          seq(
            alias("=", $.assignment_operator),
            field("value", $._variable_initializer)
          )
        )
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions))
      ),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    local_variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";"
      ),

    identifier: ($) => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // Literals
