apex/test/corpus/expressions.txt
================================================================================
EXPRESSIONS Trigger.New
================================================================================

public class Me {
  {
    TestType evt = Trigger.New;
  }
}

--------------------------------------------------------------------------------

(parser_output
  (class_declaration
    (modifiers
      (modifier))
    (identifier)
    (class_body
      (block
        (local_variable_declaration
          (type_identifier)
          (variable_declarator
            (identifier)
            (assignment_operator)
            (field_access
              (identifier)
              (identifier))))))))
